--- a/klein2012/Biblio.bib
+++ b/klein2012/Biblio.bib
@@ -7419,6 +7419,17 @@ Cit{\'e} dans \cite{ziebart2008maximum} :
 	Volume = {10},
 	Year = {1994}}
 
+@article{kaufmann1988existence,
+  title={On existence and uniqueness of a vector minimizing a convex function},
+  author={Kaufmann, H.},
+  journal={Mathematical Methods of Operations Research},
+  volume={32},
+  number={6},
+  pages={357--373},
+  year={1988},
+  publisher={Springer}
+}
+
 @conference{sammut1992learning,
 	Annote = {Cit{\'e} par \cite{abbeel2004apprenticeship} :
 	"Most of these methods try to directly mimic the demonstrator by applying a supervised learning algorithm to learn a direct mapping from the states to the actions."},
