--- a/Highway/SCIRL.org
+++ b/Highway/SCIRL.org
@@ -328,18 +328,18 @@ SCIRL_clean:
 	find . -maxdepth 1 -iname "SCIRL_Exp6.py"   | xargs $(XARGS_OPT) rm
 	find . -maxdepth 1 -iname "theta_lafem_Fast.mat"   | xargs $(XARGS_OPT) rm
 	find . -maxdepth 1 -iname "theta_lafem_Safe.mat"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/optimal_policy.m"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/make_F.m"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/make_THETA.m"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/scirl_fast_policy.dat"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/scirl_safe_policy.dat"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/scirl_fast_policy.txt"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/scirl_safe_policy.txt"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/PlayFast_scirl.dat"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/PlaySafe_scirl.dat"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/PlayFast_scirl_stripped.dat"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/PlaySafe_scirl_stripped.dat"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/PlayFast_scirl_mu.mat"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "al_code/PlaySafe_scirl_mu.mat"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "optimal_policy.m"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "make_F.m"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "make_THETA.m"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "scirl_fast_policy.dat"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "scirl_safe_policy.dat"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "scirl_fast_policy.txt"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "scirl_safe_policy.txt"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "PlayFast_scirl.dat"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "PlaySafe_scirl.dat"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "PlayFast_scirl_stripped.dat"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "PlaySafe_scirl_stripped.dat"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "PlayFast_scirl_mu.mat"   | xargs $(XARGS_OPT) rm
+	find al_code -maxdepth 1 -iname "PlaySafe_scirl_mu.mat"   | xargs $(XARGS_OPT) rm
 
   #+end_src
